--- a/index.html
+++ b/index.html
@@ -15,39 +15,38 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
     />
 
-    <title>Philip Okposo - Data Analyst Trainer</title>
+    <title>Phillantech - Philip Okposo - Data Analyst Trainer</title>
   </head>
-  <header>
-    <!-- Navbar -->
-    <nav>
-      <div id="nav-links">
-        <a href="#home" class="active">Home</a>
-        <a href="#about">About</a>
-        <div class="dropdown" tabindex="0">
-          <a
-            href="#my-work"
-            class="dropbtn dropdown-toggle"
-            aria-haspopup="true"
-            aria-expanded="false"
-          >
-            My Work <i class="fa-solid fa-chevron-down" aria-hidden="true"></i>
-          </a>
+  <nav class="fixed-nav">
+  <div class="mobile-nav-header">
+    <span class="mobile-nav-title">Philip Okposo | The Naija Dataman</span>
+    <button id="hamburger-btn" aria-label="Open navigation menu" aria-expanded="false">
+      <i class="fa-solid fa-bars"></i>
+    </button>
+  </div>
 
-          <div class="dropdown-content" role="menu" aria-label="My Work menu">
-            <a id="experience-nav" href="#experience" role="menuitem"
-              >Experience</a
-            >
-          </div>
-        </div>
-        <a href="#certificates">Certificates</a>
-        <a href="#contact">Contact</a>
+  <div id="nav-links">
+    <a href="#home" class="active">Home</a>
+    <a href="#about">About</a>
+    <div class="dropdown" tabindex="0">
+      <a href="#work" class="dropbtn dropdown-toggle" aria-haspopup="true" aria-expanded="false">
+        My Work <i class="fa-solid fa-chevron-down" aria-hidden="true"></i>
+      </a>
+      <div class="dropdown-content" role="menu" aria-label="My Work menu">
+        <a id="experience-nav" href="#experience" role="menuitem">Experience</a>
       </div>
-    </nav>
-  </header>
+    </div>
+    <a href="#certificates">Certificates</a>
+    <a href="#contact">Contact</a>
+  </div>
+</nav>
+
+<div id="nav-overlay"></div>
   <main>
     <section id="home">
       <h1 class="eyecatcher">Philip Okposo</h1>
       <h2>I'm a <span class="title">Data Analyst Trainer</span></h2>
+      <p>Principal Partner at Phillantech Consulting</p>
       <p class="home-paragraph">Making Data Work for Everyone</p>
       <div class="divider"></div>
       <div class="skills">
@@ -120,19 +119,31 @@
       </div>
 
       <div class="chat-btns">
-        <button id="talk-button"><a href="#contact">Wanna chat?</a></button>
+        <button id="talk-button">
+          <a href="#contact"
+            ><i class="fa-solid fa-comment-dots"></i
+            ><span class="btn-text">Wanna Chat?</span></a
+          >
+        </button>
         <button id="talk-button-linkedin">
           <a
             href="https://www.linkedin.com/in/philip-okposo-naijadataman/"
             target="_blank"
-            >LinkedIn</a
+            ><i class="fa-brands fa-linkedin-in"></i
+            ><span class="btn-text">LinkedIn</span></a
           >
         </button>
         <button id="talk-button-github">
-          <a href="https://github.com/philipo" target="_blank">GitHub</a>
+          <a href="https://github.com/philipo" target="_blank"
+            ><i class="fa-brands fa-github"></i
+            ><span class="btn-text">GitHub</span></a
+          >
         </button>
         <button id="talk-button-email">
-          <a href="mailto:philipokposo@gmail.com">Mail✉️</a>
+          <a href="mailto:philipokposo@gmail.com"
+            ><i class="fa-solid fa-envelope"></i>
+            <span class="btn-text">Mail</span></a
+          >
         </button>
       </div>
     </section>
@@ -415,126 +426,129 @@
       </div>
     </section>
     <!-- Certificates Section -->
-    <section id="certificates">
-      <header class="section-header">
-      <h2>Certificates</h2>
-      </header>
-      <div class="cert-grid">
-        <div class="certificate-card">
-          <div class="cert-info">
-            <h3>Business Intelligence Concepts, Tools, and Applications</h3>
-            <p>Coursera</p>
+    <section id="certificates" class="section-bg">
+      <div class="section-inner cert-inner">
+        <header class="section-header">
+          <h2>Certificates</h2>
+          <p>Validating expertise across key data domains.</p>
+        </header>
+        <div class="cert-grid">
+          <div class="certificate-card">
+            <div class="cert-info">
+              <h3>Business Intelligence Concepts, Tools, and Applications</h3>
+              <p>Coursera</p>
+            </div>
+            <a
+              href="./Certificates/BI concepts.pdf"
+              download
+              aria-label="Download Business Intelligence Concepts Certificate"
+            >
+              <i class="fa-solid fa-download"></i>
+            </a>
           </div>
-          <a
-            href="./Certificates/BI concepts.pdf"
-            download
-            aria-label="Download Business Intelligence Concepts Certificate"
-          >
-            <i class="fa-solid fa-download"></i>
-          </a>
-        </div>
 
-        <div class="certificate-card">
-          <div class="cert-info">
-            <h3>Digital Marketing Analytics in Practice</h3>
-            <p>Coursera</p>
+          <div class="certificate-card">
+            <div class="cert-info">
+              <h3>Digital Marketing Analytics in Practice</h3>
+              <p>Coursera</p>
+            </div>
+            <a
+              href="./Certificates/Digital marketing.pdf"
+              download
+              aria-label="Download Digital Marketing for Business Certificate"
+            >
+              <i class="fa-solid fa-download"></i>
+            </a>
           </div>
-          <a
-            href="./Certificates/Digital marketing.pdf"
-            download
-            aria-label="Download Digital Marketing for Business Certificate"
-          >
-            <i class="fa-solid fa-download"></i>
-          </a>
-        </div>
 
-        <div class="certificate-card">
-          <div class="cert-info">
-            <h3>Finding Your Path for Facilitation (Self-Paced)</h3>
-            <p>The Open Learning Campus</p>
+          <div class="certificate-card">
+            <div class="cert-info">
+              <h3>Finding Your Path for Facilitation (Self-Paced)</h3>
+              <p>The Open Learning Campus</p>
+            </div>
+            <a
+              href="./assets/certificates/tableau.pdf"
+              download
+              aria-label="Download Finding Your Path for Facilitation Certificate"
+            >
+              <i class="fa-solid fa-download"></i>
+            </a>
           </div>
-          <a
-            href="./assets/certificates/tableau.pdf"
-            download
-            aria-label="Download Finding Your Path for Facilitation Certificate"
-          >
-            <i class="fa-solid fa-download"></i>
-          </a>
-        </div>
 
-        <div class="certificate-card">
-          <div class="cert-info">
-            <h3>Business Intelligence and data warehousing</h3>
-            <p>Coursera</p>
+          <div class="certificate-card">
+            <div class="cert-info">
+              <h3>Business Intelligence and data warehousing</h3>
+              <p>Coursera</p>
+            </div>
+            <a
+              href="./Certificates/Business intelligence and data warehousing.pdf"
+              download
+              aria-label="Download Business Intelligence and data warehousing Certificate"
+            >
+              <i class="fa-solid fa-download"></i>
+            </a>
           </div>
-          <a
-            href="./Certificates/Business intelligence and data warehousing.pdf"
-            download
-            aria-label="Download Business Intelligence and data warehousing Certificate"
-          >
-            <i class="fa-solid fa-download"></i>
-          </a>
-        </div>
 
-        <div class="certificate-card">
-          <div class="cert-info">
-            <h3>Foundations of Learning</h3>
-            <p>The Open Learning Campus</p>
+          <div class="certificate-card">
+            <div class="cert-info">
+              <h3>Foundations of Learning</h3>
+              <p>The Open Learning Campus</p>
+            </div>
+            <a
+              href="./Certificates/Foundations of learning.pdf"
+              download
+              aria-label="Download Foundations of Learning Certificate"
+            >
+              <i class="fa-solid fa-download"></i>
+            </a>
           </div>
-          <a
-            href="./Certificates/Foundations of learning.pdf"
-            download
-            aria-label="Download Foundations of Learning Certificate"
-          >
-            <i class="fa-solid fa-download"></i>
-          </a>
-        </div>
 
-        <div class="certificate-card">
-          <div class="cert-info">
-            <h3>Python For Data Analysis: Pandas & NumPy</h3>
-            <p>Coursera</p>
+          <div class="certificate-card">
+            <div class="cert-info">
+              <h3>Python For Data Analysis: Pandas & NumPy</h3>
+              <p>Coursera</p>
+            </div>
+            <a
+              href="./Certificates/Python for data analysis.pdf"
+              download
+              aria-label="Download Python for Data Analysis Certificate"
+            >
+              <i class="fa-solid fa-download"></i>
+            </a>
           </div>
-          <a
-            href="./Certificates/Python for data analysis.pdf"
-            download
-            aria-label="Download Python for Data Analysis Certificate"
-          >
-            <i class="fa-solid fa-download"></i>
-          </a>
-        </div>
 
-        <div class="certificate-card">
-          <div class="cert-info">
-            <h3>Information Security Management Systems</h3>
-            <p>TÜV SÜD</p>
+          <div class="certificate-card">
+            <div class="cert-info">
+              <h3>Information Security Management Systems</h3>
+              <p>TÜV SÜD</p>
+            </div>
+            <a
+              href="./Certificates/Philip LI ISMS e-Certificate.pdf"
+              download
+              aria-label="Download Information Security Management Systems Certificate"
+            >
+              <i class="fa-solid fa-download"></i>
+            </a>
           </div>
-          <a
-            href="./Certificates/Philip LI ISMS e-Certificate.pdf"
-            download
-            aria-label="Download Information Security Management Systems Certificate"
-          >
-            <i class="fa-solid fa-download"></i>
-          </a>
-        </div>
 
-        <div class="certificate-card">
-          <div class="cert-info">
-            <h3>Effective Project Mangement</h3>
-            <p>Lagos Business School - Pan Atlantic University</p>
+          <div class="certificate-card">
+            <div class="cert-info">
+              <h3>Effective Project Management</h3>
+              <p>Lagos Business School - Pan Atlantic University</p>
+            </div>
+            <a
+              href="./Certificates/Project management.jpg"
+              download
+              aria-label="Download Project Management Certificate"
+            >
+              <i class="fa-solid fa-download"></i>
+            </a>
           </div>
-          <a
-            href="./Certificates/Project management.jpg"
-            download
-            aria-label="Download Project Mangement Certificate"
-          >
-            <i class="fa-solid fa-download"></i>
-          </a>
         </div>
       </div>
     </section>
 
-    <!-- CONTACT (revamped) -->
+    <!-- CONTACT -->
     <section id="contact">
       <div class="section-inner contact-inner">
         <div class="contact-left">
@@ -588,7 +602,7 @@
             </label>
 
             <div class="radio-group">
-              <span>Ready to train ?</span>
+              <span>Ready to train?</span>
               <input
                 id="yes-data"
                 type="radio"
@@ -607,31 +621,30 @@
       </div>
     </section>
   </main>
-  <script>
-    // mobile-friendly dropdown toggle helper (no frameworks)
-    (function () {
-      const dropdowns = document.querySelectorAll(".dropdown");
-      dropdowns.forEach((dd) => {
-        // on small screens, toggle .open on click of the toggle
-        const toggle = dd.querySelector(".dropdown-toggle, .dropbtn");
-        if (!toggle) return;
-        toggle.addEventListener("click", function (e) {
-          if (window.innerWidth <= 768) {
-            e.preventDefault();
-            // toggle open class
-            dd.classList.toggle("open");
-          }
-        });
-        // ensure Escape closes the open dropdown
-        dd.addEventListener("keydown", function (e) {
-          if (e.key === "Escape") {
-            dd.classList.remove("open");
-            toggle.blur();
-          }
-        });
-      });
-    })();
-  </script>
+<script>
+  const hamburgerBtn = document.getElementById('hamburger-btn');
+  const navLinks = document.getElementById('nav-links');
+  const navOverlay = document.getElementById('nav-overlay');
+  const body = document.body;
+
+  function toggleNav() {
+    body.classList.toggle('nav-open');
+    const isNavOpen = body.classList.contains('nav-open');
+    hamburgerBtn.setAttribute('aria-expanded', isNavOpen);
+  }
+
+  hamburgerBtn.addEventListener('click', toggleNav);
+
+  navOverlay.addEventListener('click', toggleNav);
+
+
+  navLinks.addEventListener('click', (event) => {
+    if (event.target.tagName === 'A') {
+      toggleNav();
+    }
+  });
+</script>
+</body>
   <footer>
     <div id="foot-links">
       <ul>
@@ -642,9 +655,16 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
-    <div>
-    <p>© Philip Okposo | Data Analyst Trainer</p>
-    <p class="acknowledge-me"><a href="https://david-idowu-portfolio.vercel.app/">Valor | AI Full-Stack</a></p>
+    <div class="footer-last">
+      <p>
+        © 2024 Philip Okposo | Principal Partner, Philanntech Consulting | Data
+        Analyst Trainer
+      </p>
+      <p class="acknowledge-me">
+        <a href="https://david-idowu-portfolio.vercel.app/"
+          >By Valor | AI Full-Stack</a
+        >
+      </p>
     </div>
   </footer>
 </html>
