better hero/home and contact design

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <a href="#about">About</a>
       <div class="dropdown" tabindex="0">
         <a
-          href="#work"
+          href="#work1"
           class="dropbtn dropdown-toggle"
           aria-haspopup="true"
           aria-expanded="false"
@@ -73,107 +73,98 @@
   <div id="nav-overlay"></div>
   <main>
     <section id="home">
-      <h1 class="eyecatcher">Philip Okposo</h1>
-      <h2>I'm a <span class="title">Data Analyst Trainer</span></h2>
-      <p>Principal Partner at Phillantech Consulting</p>
-      <p class="home-paragraph">Making Data Work for Everyone</p>
-      <div class="divider"></div>
-      <div class="skills">
-        <div class="skill" aria-label="Microsoft Excel">
-          <i class="fa-solid fa-file-excel"></i>
-          <span class="tooltip">Microsoft Excel</span>
+      <div class="home-about">
+        <div class="home-image-container">
+          <img
+            src="./assets/profile.jpg"
+            alt="Philip Okposo - Data Analyst Trainer"
+            onerror="this.onerror=null; this.src='https://placehold.co/180x180/1d72b8/ffffff?text=PROFILE'"
+          />
         </div>
-
-        <div class="skill" aria-label="Python">
-          <i class="fa-brands fa-python"></i>
-          <span class="tooltip"
-            >Python — Pandas, NumPy, Matplotlib, Seaborn</span
-          >
-        </div>
-
-        <div class="skill" aria-label="SQL">
-          <i class="fa-solid fa-database"></i>
-          <span class="tooltip">SQL — MySQL, MSSQL</span>
-        </div>
-
-        <div class="skill" aria-label="Tableau">
-          <i class="fa-solid fa-chart-bar"></i>
-          <span class="tooltip">Tableau</span>
-        </div>
-
-        <div class="skill" aria-label="Power BI">
-          <i class="fa-solid fa-chart-line"></i>
-          <span class="tooltip">Power BI</span>
-        </div>
-
-        <div class="skill" aria-label="Microsoft Teams">
-          <i class="fa-brands fa-microsoft"></i>
-          <span class="tooltip">Microsoft Teams</span>
-        </div>
-
-        <div class="skill" aria-label="Zoom">
-          <i class="fa-solid fa-video"></i>
-          <span class="tooltip">Zoom</span>
-        </div>
-
-        <div class="skill" aria-label="Notion">
-          <i class="fa-brands fa-n"></i>
-          <span class="tooltip">Notion</span>
-        </div>
-
-        <div class="skill" aria-label="Trello">
-          <i class="fa-brands fa-trello"></i>
-          <span class="tooltip">Trello</span>
-        </div>
-
-        <div class="skill" aria-label="Kahoot">
-          <i class="fa-solid fa-gamepad"></i>
-          <span class="tooltip">Kahoot</span>
-        </div>
-
-        <div class="skill" aria-label="Canva">
-          <i class="fa-solid fa-paintbrush"></i>
-          <span class="tooltip">Canva</span>
-        </div>
-
-        <div class="skill" aria-label="Google Colab">
-          <i class="fa-solid fa-code"></i>
-          <span class="tooltip">Google Colab</span>
-        </div>
-
-        <div class="skill" aria-label="Jupyter Notebook">
-          <i class="fa-solid fa-circle-nodes"></i>
-          <span class="tooltip">Jupyter Notebook</span>
+        <div class="home-about-text">
+          <p>HI, I'M PHILIP OKPOSO, I'M A</p>
+          <h2>Data Analyst <br />Trainer</h2>
+          <p>
+            I help businesses and individuals leverage data for strategic
+            decision-making and career growth.
+          </p>
+          <div class="home-buttons">
+            <a href="#contact" class="btn primary-btn">Contact Me</a>
+            <a href="#work1" class="btn secondary-btn">View My Work</a>
+          </div>
         </div>
       </div>
 
-      <div class="chat-btns">
-        <button id="talk-button">
-          <a href="#contact"
-            ><i class="fa-solid fa-comment-dots"></i
-            ><span class="btn-text">Wanna Chat?</span></a
-          >
-        </button>
-        <button id="talk-button-linkedin">
-          <a
-            href="https://www.linkedin.com/in/philip-okposo-naijadataman/"
-            target="_blank"
-            ><i class="fa-brands fa-linkedin-in"></i
-            ><span class="btn-text">LinkedIn</span></a
-          >
-        </button>
-        <button id="talk-button-github">
-          <a href="https://github.com/philipo" target="_blank"
-            ><i class="fa-brands fa-github"></i
-            ><span class="btn-text">GitHub</span></a
-          >
-        </button>
-        <button id="talk-button-email">
-          <a href="mailto:philipokposo@gmail.com"
-            ><i class="fa-solid fa-envelope"></i>
-            <span class="btn-text">Mail</span></a
-          >
-        </button>
+      <div class="skills-container">
+        <div class="skills-title">My Tech Stack</div>
+        <div class="skills">
+          <div class="skill" aria-label="Microsoft Excel">
+            <i class="fa-solid fa-file-excel"></i>
+            <span class="tooltip">Microsoft Excel</span>
+          </div>
+
+          <div class="skill" aria-label="Python">
+            <i class="fa-brands fa-python"></i>
+            <span class="tooltip"
+              >Python — Pandas, NumPy, Matplotlib, Seaborn</span
+            >
+          </div>
+
+          <div class="skill" aria-label="SQL">
+            <i class="fa-solid fa-database"></i>
+            <span class="tooltip">SQL — MySQL, MSSQL</span>
+          </div>
+
+          <div class="skill" aria-label="Tableau">
+            <i class="fa-solid fa-chart-bar"></i>
+            <span class="tooltip">Tableau</span>
+          </div>
+
+          <div class="skill" aria-label="Power BI">
+            <i class="fa-solid fa-chart-line"></i>
+            <span class="tooltip">Power BI</span>
+          </div>
+
+          <div class="skill" aria-label="Microsoft Teams">
+            <i class="fa-brands fa-microsoft"></i>
+            <span class="tooltip">Microsoft Teams</span>
+          </div>
+
+          <div class="skill" aria-label="Zoom">
+            <i class="fa-solid fa-video"></i>
+            <span class="tooltip">Zoom</span>
+          </div>
+
+          <div class="skill" aria-label="Notion">
+            <i class="fa-brands fa-n"></i>
+            <span class="tooltip">Notion</span>
+          </div>
+
+          <div class="skill" aria-label="Trello">
+            <i class="fa-brands fa-trello"></i>
+            <span class="tooltip">Trello</span>
+          </div>
+
+          <div class="skill" aria-label="Kahoot">
+            <i class="fa-solid fa-gamepad"></i>
+            <span class="tooltip">Kahoot</span>
+          </div>
+
+          <div class="skill" aria-label="Canva">
+            <i class="fa-solid fa-paintbrush"></i>
+            <span class="tooltip">Canva</span>
+          </div>
+
+          <div class="skill" aria-label="Google Colab">
+            <i class="fa-solid fa-code"></i>
+            <span class="tooltip">Google Colab</span>
+          </div>
+
+          <div class="skill" aria-label="Jupyter Notebook">
+            <i class="fa-solid fa-circle-nodes"></i>
+            <span class="tooltip">Jupyter Notebook</span>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -222,6 +213,7 @@
       </div>
     </section>
     <!-- MY WORK  -->
+    <div id="work1"></div>
     <section id="work my-work" aria-label="Work Highlights">
       <div class="section-inner">
         <header class="work-header section-header">
@@ -601,64 +593,80 @@
             </p>
           </header>
 
-          <div class="contact-info">
-            <p>
-              <strong>Email:</strong>
-              <a href="mailto:philipokposo@gmail.com">philipokposo@gmail.com</a>
-            </p>
-            <p>
-              <strong>LinkedIn:</strong>
-              <a
-                href="https://www.linkedin.com/in/philip-okposo-naijadataman/"
-                target="_blank"
-                >Philip Okposo</a
-              >
-            </p>
-            <p><strong>Location:</strong> Lagos, Nigeria</p>
-            <p class="contact-note">
-              Available for corporate trainings, guest lectures and curriculum
-              advisory.
-            </p>
-          </div>
+          <div class="contact-grid">
+          <article class="contact-card">
+            <i class="fa-solid fa-envelope contact-icon"></i>
+            <h3>Email</h3>
+            <p>philipokposo@gmail.com</p>
+            <a href="mailto:philipokposo@gmail.com" class="contact-link">Send a message</a>
+          </article>
+
+          <article class="contact-card">
+            <i class="fa-brands fa-linkedin-in contact-icon"></i>
+            <h3>LinkedIn</h3>
+            <p>Philip Okposo (Naija Dataman)</p>
+            <a href="https://www.linkedin.com/in/philip-okposo-naijadataman/" target="_blank" class="contact-link">Connect now</a>
+          </article>
+
+          <article class="contact-card">
+            <i class="fa-solid fa-phone contact-icon"></i>
+            <h3>Phone</h3>
+            <p>+234 803 346 7620</p>
+            <a href="tel:+2348033467620" class="contact-link">Call / WhatsApp</a>
+          </article>
+
+          <article class="contact-card">
+            <h3>Phillantech Consulting</h3>
+            <p>Data analytics for business decisions, LMS Implementation and others.</p>
+            <a href="#" class="contact-link">Consult?</a>
+          </article>
+        </div>
         </div>
 
         <div class="contact-right">
-          <form
-            action="https://formspree.io/f/mrbyodoo"
-            method="POST"
-            class="contact-card"
-          >
-            <label>
-              Your email:
-              <input
-                type="email"
-                name="email"
-                placeholder="philipokposo@gmail.com"
-                required
-              />
-            </label>
+          <form>
+          <label for="email">Email Address</label>
+          <input
+            type="email"
+            id="email"
+            name="email"
+            placeholder="your-email@example.com"
+            required
+          />
 
-            <label>
-              Your message:
-              <textarea name="message" rows="6" cols="30"></textarea>
-            </label>
+          <label>I'm interested in...</label>
+          <div class="radio-group">
+            <input type="radio" id="training" name="interest" value="Training" />
+            <label for="training">Training</label>
 
-            <div class="radio-group">
-              <span>Ready to train?</span>
-              <input
-                id="yes-data"
-                type="radio"
-                name="train-in"
-                value="Yes"
-                checked
-              />
-              <label for="yes-data">Yes</label>
-              <input id="no-data" type="radio" name="train-in" value="No" />
-              <label for="no-data">No</label>
-            </div>
+            <input
+              type="radio"
+              id="lecturing"
+              name="interest"
+              value="Lecturing"
+            />
+            <label for="lecturing">Lecturing</label>
 
-            <button type="submit">Send</button>
-          </form>
+            <input
+              type="radio"
+              id="consulting"
+              name="interest"
+              value="Consulting"
+            />
+            <label for="consulting">Consulting</label>
+          </div>
+
+          <label for="message">Your Message</label>
+          <textarea
+            id="message"
+            name="message"
+            rows="4"
+            placeholder="Tell me about your project or need..."
+            required
+          ></textarea>
+
+          <button id="submit-button" type="submit">Send Message</button>
+        </form>
         </div>
       </div>
     </section>
