--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
           <div class="home-buttons">
             <a href="#contact" class="btn primary-btn">Contact Me</a>
             <a href="#work1" class="btn secondary-btn">View My Work</a>
+            <a href="https://www.linkedin.com/in/philip-okposo-naijadataman" class="btn primary-btn">LinkedIn</a>
+            <a href="https://github.com/PhilOkp" class="btn primary-btn">Github</a>
           </div>
         </div>
       </div>
