--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     />
     <link rel="manifest" href="/site.webmanifest" />
 
-    <title>Phillantech - Philip Okposo - Data Analyst Trainer</title>
+    <title>Philanntech - Philip Okposo - Data Analyst Trainer</title>
   </head>
   <nav class="fixed-nav">
     <div class="mobile-nav-header">
-      <span class="mobile-nav-title">Philip Okposo | The Naija Dataman</span>
+      <span class="mobile-nav-title">Philip Okposo | The Naijadataman</span>
       <button
         id="hamburger-btn"
         aria-label="Open navigation menu"
@@ -91,8 +91,14 @@
           <div class="home-buttons">
             <a href="#contact" class="btn primary-btn">Contact Me</a>
             <a href="#work1" class="btn secondary-btn">View My Work</a>
-            <a href="https://www.linkedin.com/in/philip-okposo-naijadataman" class="btn primary-btn">LinkedIn</a>
-            <a href="https://github.com/PhilOkp" class="btn primary-btn">Github</a>
+            <a
+              href="https://www.linkedin.com/in/philip-okposo-naijadataman"
+              class="btn primary-btn"
+              >LinkedIn</a
+            >
+            <a href="https://github.com/PhilOkp" class="btn primary-btn"
+              >Github</a
+            >
           </div>
         </div>
       </div>
@@ -209,7 +215,7 @@
               adoption of learning management systems across Nigerian
               institutions.
             </p>
-            <p>The Naija Dataman</p>
+            <p>The Naijadataman</p>
           </div>
         </div>
       </div>
@@ -596,79 +602,96 @@
           </header>
 
           <div class="contact-grid">
-          <article class="contact-card">
-            <i class="fa-solid fa-envelope contact-icon"></i>
-            <h3>Email</h3>
-            <p>philipokposo@gmail.com</p>
-            <a href="mailto:philipokposo@gmail.com" class="contact-link">Send a message</a>
-          </article>
+            <article class="contact-card">
+              <i class="fa-solid fa-envelope contact-icon"></i>
+              <h3>Email</h3>
+              <p>philipokposo@gmail.com</p>
+              <a href="mailto:philipokposo@gmail.com" class="contact-link"
+                >Send a message</a
+              >
+            </article>
 
-          <article class="contact-card">
-            <i class="fa-brands fa-linkedin-in contact-icon"></i>
-            <h3>LinkedIn</h3>
-            <p>Philip Okposo (Naija Dataman)</p>
-            <a href="https://www.linkedin.com/in/philip-okposo-naijadataman/" target="_blank" class="contact-link">Connect now</a>
-          </article>
+            <article class="contact-card">
+              <i class="fa-brands fa-linkedin-in contact-icon"></i>
+              <h3>LinkedIn</h3>
+              <p>Philip Okposo (Naijadataman)</p>
+              <a
+                href="https://www.linkedin.com/in/philip-okposo-naijadataman/"
+                target="_blank"
+                class="contact-link"
+                >Connect now</a
+              >
+            </article>
 
-          <article class="contact-card">
-            <i class="fa-solid fa-phone contact-icon"></i>
-            <h3>Phone</h3>
-            <p>+234 803 346 7620</p>
-            <a href="tel:+2348033467620" class="contact-link">Call / WhatsApp</a>
-          </article>
+            <article class="contact-card">
+              <i class="fa-solid fa-phone contact-icon"></i>
+              <h3>Phone</h3>
+              <p>+234 803 346 7620</p>
+              <a href="tel:+2348033467620" class="contact-link"
+                >Call / WhatsApp</a
+              >
+            </article>
 
-          <article class="contact-card">
-            <h3>Phillantech Consulting</h3>
-            <p>Data analytics for business decisions, LMS Implementation and others.</p>
-            <a href="#" class="contact-link">Consult?</a>
-          </article>
-        </div>
+            <article class="contact-card">
+              <h3>Philanntech Consulting</h3>
+              <p>
+                Data analytics for business decisions, LMS Implementation and
+                others.
+              </p>
+              <a href="#" class="contact-link">Consult?</a>
+            </article>
+          </div>
         </div>
 
         <div class="contact-right">
           <form>
-          <label for="email">Email Address</label>
-          <input
-            type="email"
-            id="email"
-            name="email"
-            placeholder="your-email@example.com"
-            required
-          />
-
-          <label>I'm interested in...</label>
-          <div class="radio-group">
-            <input type="radio" id="training" name="interest" value="Training" />
-            <label for="training">Training</label>
-
+            <label for="email">Email Address</label>
             <input
-              type="radio"
-              id="lecturing"
-              name="interest"
-              value="Lecturing"
+              type="email"
+              id="email"
+              name="email"
+              placeholder="your-email@example.com"
+              required
             />
-            <label for="lecturing">Lecturing</label>
 
-            <input
-              type="radio"
-              id="consulting"
-              name="interest"
-              value="Consulting"
-            />
-            <label for="consulting">Consulting</label>
-          </div>
+            <label>I'm interested in...</label>
+            <div class="radio-group">
+              <input
+                type="radio"
+                id="training"
+                name="interest"
+                value="Training"
+              />
+              <label for="training">Training</label>
 
-          <label for="message">Your Message</label>
-          <textarea
-            id="message"
-            name="message"
-            rows="4"
-            placeholder="Tell me about your project or need..."
-            required
-          ></textarea>
+              <input
+                type="radio"
+                id="lecturing"
+                name="interest"
+                value="Lecturing"
+              />
+              <label for="lecturing">Lecturing</label>
 
-          <button id="submit-button" type="submit">Send Message</button>
-        </form>
+              <input
+                type="radio"
+                id="consulting"
+                name="interest"
+                value="Consulting"
+              />
+              <label for="consulting">Consulting</label>
+            </div>
+
+            <label for="message">Your Message</label>
+            <textarea
+              id="message"
+              name="message"
+              rows="4"
+              placeholder="Tell me about your project or need..."
+              required
+            ></textarea>
+
+            <button id="submit-button" type="submit">Send Message</button>
+          </form>
         </div>
       </div>
     </section>
