removed Phillantech from the name

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     />
     <link rel="manifest" href="/site.webmanifest" />
 
-    <title>Philanntech - Philip Okposo - Data Analyst Trainer</title>
+    <title>Philip Okposo - Data Analyst Trainer</title>
   </head>
   <nav class="fixed-nav">
     <div class="mobile-nav-header">
@@ -750,7 +750,7 @@
     </div>
     <div class="footer-last">
       <p>
-        © 2024 Philip Okposo | Principal Partner, Philanntech Consulting | Data
+        © 2024 Philip Okposo | Data
         Analyst Trainer
       </p>
       <p class="acknowledge-me">
